--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4",
-    "set-value": "3.0.0"
+    "vite": "^2.6.4"
   }
 }
